@@ -206,7 +206,7 @@ int putMsgInArea(s_area *echo, s_message *msg)
 int makeRequestToLink (char *areatag, s_link *link) {
     s_message *msg;
 
-    if (link->msg == NULL) 
+    if (link->msg == NULL)
     {
         msg = makeMessage(link->ourAka, &(link->hisAka), config->sysop,
             link->areafix.name ? link->areafix.name : "areafix",
@@ -289,7 +289,7 @@ void update_queue(s_area *area)
         nfree(line);
     }
     nfree(line)
-    
+
     if (upDate == 0)
     {
         time_t eTime;
@@ -348,7 +348,7 @@ void delete_area(s_area *area)
 	break;
     }
 
-  
+
     /* delete msgbase and dupebase for the area */
     if (eraseBase) {
 
@@ -400,12 +400,12 @@ void delete_area(s_area *area)
 	    config->echoAreaCount--;
 	}
     }
-    fprintf(outlog, "done\n"); 
+    fprintf(outlog, "done\n");
 }
 
 
 int main(int argc, char **argv) {
-    
+
     int i, j;
     UINT k;
     struct _minf m;
@@ -430,15 +430,15 @@ int main(int argc, char **argv) {
     FILE *fNoDupe = NULL;
     char *dupename = NULL;
     char *cfgfile = NULL;
-    
-    
+
+
     outlog=stdout;
     setbuf(outlog, NULL);
-    
+
     versionStr = GenVersionStr( "hptkill", VER_MAJOR, VER_MINOR, VER_PATCH,
                                VER_BRANCH, cvs_date );
     fprintf(outlog,"%s\n\n", versionStr);
-    
+
     for (i=1; i<argc; i++) {
         if ( argv[i][0] == '-' ) {
             switch (argv[i][1])
@@ -454,36 +454,36 @@ int main(int argc, char **argv) {
             case '1': /* send unsubscribe message to first link only */
                 sendUnSubscribe = eFirstLink;
                 break;
-                
+
             case 'n': /* don't send unsubscribe message */
             case 'N':
                 sendUnSubscribe = eNobody;
                 break;
-                
+
             case 'a': /* send unsubscribe message all links */
             case 'A':
                 sendUnSubscribe = eAll;
                 break;
-                
+
             case 'd': /* delete area from config */
             case 'D':
                 delFromConfig = 1;
                 break;
-                
+
             case 's': /* save (don't erase) message & dupe bases */
             case 'S':
                 eraseBase = 0;
                 break;
-                
+
             case 'f': /* read areas list from file */
             case 'F':
                 i++;
-                
+
                 if ( argv[i] == NULL || argv[i][0] == '\0') {
                     usage();
                     exit(-1);
                 }
-                
+
                 if (strcmp(argv[i], "-") == 0) {
                     f=stdin;
                 } else {
@@ -492,36 +492,44 @@ int main(int argc, char **argv) {
                         exit(-1);
                     }
                 }
-                
+
                 while (!feof(f)) {
                     line = readLine(f);
-                    
+
                     if (line) {
+                        char *spacep=strchr(line+1,' ');
+                        if(spacep) { /* Format FILEBONE.NA: "areatag comment" */
+                          *spacep=0; /* First char should be alphanumberic    */
+                          spacep=strdup(line);
+                          free(line);
+                          line=spacep;
+                        }
+                        if( line[0]==0 ) continue; /* skip empty line */
                         nareas++;
                         areas = (char **)srealloc ( areas, nareas*sizeof(char *));
                         areas[nareas-1] = line;
                         needfree = (char *)srealloc ( needfree, nareas*sizeof(char));
                         needfree[nareas-1] = 1;
                     }
-                    
+
                 }
-                
+
                 if (f != stdin) fclose(f);
                 break;
-                
+
             case 'p': /* kill passthrough areas with 1 link*/
             case 'P':
                 killNoLink++;
                 killPass++;
                 if (argv[i][2]=='p' || argv[i][2]=='P') checkPaused++;
                 break;
-                
+
             case 'y': /* kill ANY areas with <=1 link*/
             case 'Y':
                 killLowLink++;
                 if (argv[i][2]=='p' || argv[i][2]=='P') checkPaused++;
                 break;
-                
+
             case 'o': /* kill passthrough area with dupebase older 'days' days */
             case 'O':
                 if (argv[i][1]=='O') killWithoutDupes++;
@@ -534,7 +542,7 @@ int main(int argc, char **argv) {
                 killOld++;
                 oldest = time(NULL) - atoi(argv[i]) * 60*60*24;
                 break;
-                
+
             case 'l': /* write list of areas without dupebase to file  */
             case 'L':
                 i++;
@@ -544,11 +552,11 @@ int main(int argc, char **argv) {
                 }
                 listNoDupeFile = argv[i];
                 break;
-                
+
             case 'C': /* create empty dupebase if it doesn't exist */
                 createDupe++;
                 break;
-                
+
             default:
                 usage();
                 exit(-1);
@@ -562,7 +570,7 @@ int main(int argc, char **argv) {
         needfree[nareas-1] = 0;
     }
     }
-    
+
     if (nareas == 0) {
         if (killPass || killLowLink) {
             nareas++;
@@ -581,7 +589,7 @@ int main(int argc, char **argv) {
     if( cfgfile && cfgfile[0] )
         config = readConfig(cfgfile);
     else   config = readConfig(getConfigFileName());
-    
+
     if (!config) {
         fprintf(outlog, "Could not read fido config\n");
         return (1);
@@ -598,13 +606,13 @@ int main(int argc, char **argv) {
     m.req_version = 0;
     m.def_zone = (UINT16) config->addr[0].zone;
     if (MsgOpenApi(&m) != 0) fprintf(outlog, "MsgApiOpen Error");
-    
+
     for ( j=0; j<nareas; j++) {
         found = 0;
-        
+
         for (i=0, area = config->echoAreas; (unsigned int)i < config->echoAreaCount; i++, area++) {
             if (patimat(area->areaName, areas[j])==1){
-                
+
                 delArea = 0;
                 if (killPass==0 && killLowLink==0) delArea++;
                 else if ((area->msgbType & MSGTYPE_PASSTHROUGH) == MSGTYPE_PASSTHROUGH) {
@@ -633,7 +641,7 @@ int main(int argc, char **argv) {
                                         }
                                     }
                                     if (fNoDupe) fprintf (fNoDupe, "%s\n", area->areaName);
-                                    
+
                                 }
                             }
                             nfree(dupename);
@@ -657,11 +665,11 @@ int main(int argc, char **argv) {
                         i--;
                         area--;
                     }
-                    
+
                 }
             }
         }
-        
+
         if (killPass==0 && killLowLink==0) {
             for (i=0, area=config->localAreas; (unsigned int)i < config->localAreaCount; i++, area++) {
                 if (patimat(area->areaName, areas[j])==1){
@@ -674,13 +682,13 @@ int main(int argc, char **argv) {
                     }
                 }
             }
-            
+
             if (!found) fprintf(outlog, "Couldn't find area \"%s\"\n", areas[j]);
         }
     }
-    
+
     if (fNoDupe) fclose (fNoDupe);
-    
+
     if (killed) fprintf(outlog, "\n");
     /* Put mail for links to netmail */
     for (i=0; (unsigned int)i < config->linkCount; i++) {
@@ -697,17 +705,17 @@ int main(int argc, char **argv) {
                 link->hisAka.zone ,
                 link->hisAka.net  ,
                 link->hisAka.node);
-            
+
             putMsgInArea(&(config->netMailAreas[0]), config->links[i]->msg);
             nfree(link->msg);
             fprintf(outlog, "done\n");
         }
     }
-    
+
     for ( j=0; j<nareas; j++) if (needfree[nareas-1]) nfree(areas[j]);
     if (needfree) nfree(needfree);
     if (areas) nfree(areas);
-    
+
     if (killed && config->echotosslog) {
         f=fopen(config->echotosslog, "a");
         if (f==NULL) {
@@ -717,7 +725,7 @@ int main(int argc, char **argv) {
             fclose(f);
         }
     }
-    
+
     if (createDupe) {
         for (i=0, area = config->echoAreas; (unsigned int)i < config->echoAreaCount; i++, area++) {
             dupename = createDupeFileName(area);
@@ -733,10 +741,10 @@ int main(int argc, char **argv) {
             nfree(dupename);
         }
     }
-    
+
     /* deinit SMAPI */
     MsgCloseApi();
-    
+
     disposeConfig(config);
     fprintf(outlog,"Done\n");
     return (0);
